src/parser/generated/poglinParser.py
# Generated from grammars/poglin.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class poglinParser ( Parser ):

    grammarFileName = "poglin.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'start'", "'end'", "'var'", "'if'", "'else'", 
                     "'while'", "'escreva'", "'leia'", "'pog'", "'Int'", 
                     "'String'", "'+'", "'-'", "'*'", "'/'", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'&&'", "'||'", "'!'", 
                     "'{'", "'}'", "'('", "')'", "';'", "':'", "'='" ]

    symbolicNames = [ "<INVALID>", "START", "END", "VAR", "IF", "ELSE", 
                      "WHILE", "ESCREVA", "LEIA", "POG", "INT_TYPE", "STRING_TYPE", 
                      "PLUS", "MINUS", "MULT", "DIV", "EQUALS", "NEQUALS", 
                      "LT", "LTE", "GT", "GTE", "AND", "OR", "NOT", "LBRACE", 
                      "RBRACE", "LPAREN", "RPAREN", "SEMI", "COLON", "ASSIGN", 
                      "ID", "INT", "STRING", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_expression = 2
    RULE_logicalOrExpression = 3
    RULE_logicalAndExpression = 4
    RULE_equalityExpression = 5
    RULE_relationalExpression = 6
    RULE_additiveExpression = 7
    RULE_multiplicativeExpression = 8
    RULE_unaryExpression = 9
    RULE_primary = 10
    RULE_type = 11

    ruleNames =  [ "program", "statement", "expression", "logicalOrExpression", 
                   "logicalAndExpression", "equalityExpression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "primary", "type" ]

    EOF = Token.EOF
    START=1
    END=2
    VAR=3
    IF=4
    ELSE=5
    WHILE=6
    ESCREVA=7
    LEIA=8
    POG=9
    INT_TYPE=10
    STRING_TYPE=11
    PLUS=12
    MINUS=13
    MULT=14
    DIV=15
    EQUALS=16
    NEQUALS=17
    LT=18
    LTE=19
    GT=20
    GTE=21
    AND=22
    OR=23
    NOT=24
    LBRACE=25
    RBRACE=26
    LPAREN=27
    RPAREN=28
    SEMI=29
    COLON=30
    ASSIGN=31
    ID=32
    INT=33
    STRING=34
    WS=35
    COMMENT=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def START(self):
            return self.getToken(poglinParser.START, 0)

        def LBRACE(self):
            return self.getToken(poglinParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(poglinParser.RBRACE, 0)

        def END(self):
            return self.getToken(poglinParser.END, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.StatementContext)
            else:
                return self.getTypedRuleContext(poglinParser.StatementContext,i)


        def getRuleIndex(self):
            return poglinParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = poglinParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 24
            self.match(poglinParser.START)
            self.state = 25
            self.match(poglinParser.LBRACE)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4294968024) != 0):
                self.state = 26
                self.statement()
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(poglinParser.RBRACE)
            self.state = 33
            self.match(poglinParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return poglinParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhileStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a poglinParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(poglinParser.WHILE, 0)
        def LPAREN(self):
            return self.getToken(poglinParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(poglinParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(poglinParser.RPAREN, 0)
        def LBRACE(self):
            return self.getToken(poglinParser.LBRACE, 0)
        def RBRACE(self):
            return self.getToken(poglinParser.RBRACE, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.StatementContext)
            else:
                return self.getTypedRuleContext(poglinParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)


    class PogStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a poglinParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def POG(self):
            return self.getToken(poglinParser.POG, 0)
        def SEMI(self):
            return self.getToken(poglinParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPogStatement" ):
                listener.enterPogStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPogStatement" ):
                listener.exitPogStatement(self)


    class PrintStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a poglinParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ESCREVA(self):
            return self.getToken(poglinParser.ESCREVA, 0)
        def LPAREN(self):
            return self.getToken(poglinParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(poglinParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(poglinParser.RPAREN, 0)
        def SEMI(self):
            return self.getToken(poglinParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)


    class AssignmentContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a poglinParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(poglinParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(poglinParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(poglinParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(poglinParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)


    class ReadStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a poglinParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(poglinParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(poglinParser.ASSIGN, 0)
        def LEIA(self):
            return self.getToken(poglinParser.LEIA, 0)
        def LPAREN(self):
            return self.getToken(poglinParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(poglinParser.RPAREN, 0)
        def SEMI(self):
            return self.getToken(poglinParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStatement" ):
                listener.enterReadStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStatement" ):
                listener.exitReadStatement(self)


    class IfStatementContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a poglinParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(poglinParser.IF, 0)
        def LPAREN(self):
            return self.getToken(poglinParser.LPAREN, 0)
        def expression(self):
            return self.getTypedRuleContext(poglinParser.ExpressionContext,0)

        def RPAREN(self):
            return self.getToken(poglinParser.RPAREN, 0)
        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.LBRACE)
            else:
                return self.getToken(poglinParser.LBRACE, i)
        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.RBRACE)
            else:
                return self.getToken(poglinParser.RBRACE, i)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.StatementContext)
            else:
                return self.getTypedRuleContext(poglinParser.StatementContext,i)

        def ELSE(self):
            return self.getToken(poglinParser.ELSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)


    class VarDeclarationContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a poglinParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def VAR(self):
            return self.getToken(poglinParser.VAR, 0)
        def ID(self):
            return self.getToken(poglinParser.ID, 0)
        def COLON(self):
            return self.getToken(poglinParser.COLON, 0)
        def type_(self):
            return self.getTypedRuleContext(poglinParser.TypeContext,0)

        def ASSIGN(self):
            return self.getToken(poglinParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(poglinParser.ExpressionContext,0)

        def SEMI(self):
            return self.getToken(poglinParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)



    def statement(self):

        localctx = poglinParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = poglinParser.VarDeclarationContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 35
                self.match(poglinParser.VAR)
                self.state = 36
                self.match(poglinParser.ID)
                self.state = 37
                self.match(poglinParser.COLON)
                self.state = 38
                self.type_()
                self.state = 39
                self.match(poglinParser.ASSIGN)
                self.state = 40
                self.expression()
                self.state = 41
                self.match(poglinParser.SEMI)
                pass

            elif la_ == 2:
                localctx = poglinParser.AssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 43
                self.match(poglinParser.ID)
                self.state = 44
                self.match(poglinParser.ASSIGN)
                self.state = 45
                self.expression()
                self.state = 46
                self.match(poglinParser.SEMI)
                pass

            elif la_ == 3:
                localctx = poglinParser.PrintStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.match(poglinParser.ESCREVA)
                self.state = 49
                self.match(poglinParser.LPAREN)
                self.state = 50
                self.expression()
                self.state = 51
                self.match(poglinParser.RPAREN)
                self.state = 52
                self.match(poglinParser.SEMI)
                pass

            elif la_ == 4:
                localctx = poglinParser.ReadStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 54
                self.match(poglinParser.ID)
                self.state = 55
                self.match(poglinParser.ASSIGN)
                self.state = 56
                self.match(poglinParser.LEIA)
                self.state = 57
                self.match(poglinParser.LPAREN)
                self.state = 58
                self.match(poglinParser.RPAREN)
                self.state = 59
                self.match(poglinParser.SEMI)
                pass

            elif la_ == 5:
                localctx = poglinParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.match(poglinParser.IF)
                self.state = 61
                self.match(poglinParser.LPAREN)
                self.state = 62
                self.expression()
                self.state = 63
                self.match(poglinParser.RPAREN)
                self.state = 64
                self.match(poglinParser.LBRACE)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4294968024) != 0):
                    self.state = 65
                    self.statement()
                    self.state = 70
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 71
                self.match(poglinParser.RBRACE)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==5:
                    self.state = 72
                    self.match(poglinParser.ELSE)
                    self.state = 73
                    self.match(poglinParser.LBRACE)
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4294968024) != 0):
                        self.state = 74
                        self.statement()
                        self.state = 79
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 80
                    self.match(poglinParser.RBRACE)


                pass

            elif la_ == 6:
                localctx = poglinParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 83
                self.match(poglinParser.WHILE)
                self.state = 84
                self.match(poglinParser.LPAREN)
                self.state = 85
                self.expression()
                self.state = 86
                self.match(poglinParser.RPAREN)
                self.state = 87
                self.match(poglinParser.LBRACE)
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4294968024) != 0):
                    self.state = 88
                    self.statement()
                    self.state = 93
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 94
                self.match(poglinParser.RBRACE)
                pass

            elif la_ == 7:
                localctx = poglinParser.PogStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.match(poglinParser.POG)
                self.state = 97
                self.match(poglinParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrExpression(self):
            return self.getTypedRuleContext(poglinParser.LogicalOrExpressionContext,0)


        def getRuleIndex(self):
            return poglinParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = poglinParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.logicalOrExpression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalAndExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.LogicalAndExpressionContext)
            else:
                return self.getTypedRuleContext(poglinParser.LogicalAndExpressionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.OR)
            else:
                return self.getToken(poglinParser.OR, i)

        def getRuleIndex(self):
            return poglinParser.RULE_logicalOrExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalOrExpression" ):
                listener.enterLogicalOrExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalOrExpression" ):
                listener.exitLogicalOrExpression(self)




    def logicalOrExpression(self):

        localctx = poglinParser.LogicalOrExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_logicalOrExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.logicalAndExpression()
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 103
                self.match(poglinParser.OR)
                self.state = 104
                self.logicalAndExpression()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalAndExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equalityExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.EqualityExpressionContext)
            else:
                return self.getTypedRuleContext(poglinParser.EqualityExpressionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.AND)
            else:
                return self.getToken(poglinParser.AND, i)

        def getRuleIndex(self):
            return poglinParser.RULE_logicalAndExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogicalAndExpression" ):
                listener.enterLogicalAndExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogicalAndExpression" ):
                listener.exitLogicalAndExpression(self)




    def logicalAndExpression(self):

        localctx = poglinParser.LogicalAndExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_logicalAndExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.equalityExpression()
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 111
                self.match(poglinParser.AND)
                self.state = 112
                self.equalityExpression()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.RelationalExpressionContext)
            else:
                return self.getTypedRuleContext(poglinParser.RelationalExpressionContext,i)


        def EQUALS(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.EQUALS)
            else:
                return self.getToken(poglinParser.EQUALS, i)

        def NEQUALS(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.NEQUALS)
            else:
                return self.getToken(poglinParser.NEQUALS, i)

        def getRuleIndex(self):
            return poglinParser.RULE_equalityExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityExpression" ):
                listener.enterEqualityExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqualityExpression" ):
                listener.exitEqualityExpression(self)




    def equalityExpression(self):

        localctx = poglinParser.EqualityExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_equalityExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.relationalExpression()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==16 or _la==17:
                self.state = 119
                _la = self._input.LA(1)
                if not(_la==16 or _la==17):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 120
                self.relationalExpression()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.AdditiveExpressionContext)
            else:
                return self.getTypedRuleContext(poglinParser.AdditiveExpressionContext,i)


        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.LT)
            else:
                return self.getToken(poglinParser.LT, i)

        def LTE(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.LTE)
            else:
                return self.getToken(poglinParser.LTE, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.GT)
            else:
                return self.getToken(poglinParser.GT, i)

        def GTE(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.GTE)
            else:
                return self.getToken(poglinParser.GTE, i)

        def getRuleIndex(self):
            return poglinParser.RULE_relationalExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpression" ):
                listener.enterRelationalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpression" ):
                listener.exitRelationalExpression(self)




    def relationalExpression(self):

        localctx = poglinParser.RelationalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_relationalExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.additiveExpression()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3932160) != 0):
                self.state = 127
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3932160) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 128
                self.additiveExpression()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.MultiplicativeExpressionContext)
            else:
                return self.getTypedRuleContext(poglinParser.MultiplicativeExpressionContext,i)


        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.PLUS)
            else:
                return self.getToken(poglinParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.MINUS)
            else:
                return self.getToken(poglinParser.MINUS, i)

        def getRuleIndex(self):
            return poglinParser.RULE_additiveExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveExpression" ):
                listener.enterAdditiveExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveExpression" ):
                listener.exitAdditiveExpression(self)




    def additiveExpression(self):

        localctx = poglinParser.AdditiveExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_additiveExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.multiplicativeExpression()
            self.state = 139
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12 or _la==13:
                self.state = 135
                _la = self._input.LA(1)
                if not(_la==12 or _la==13):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 136
                self.multiplicativeExpression()
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unaryExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(poglinParser.UnaryExpressionContext)
            else:
                return self.getTypedRuleContext(poglinParser.UnaryExpressionContext,i)


        def MULT(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.MULT)
            else:
                return self.getToken(poglinParser.MULT, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(poglinParser.DIV)
            else:
                return self.getToken(poglinParser.DIV, i)

        def getRuleIndex(self):
            return poglinParser.RULE_multiplicativeExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeExpression" ):
                listener.enterMultiplicativeExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeExpression" ):
                listener.exitMultiplicativeExpression(self)




    def multiplicativeExpression(self):

        localctx = poglinParser.MultiplicativeExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_multiplicativeExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.unaryExpression()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14 or _la==15:
                self.state = 143
                _la = self._input.LA(1)
                if not(_la==14 or _la==15):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 144
                self.unaryExpression()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(poglinParser.NOT, 0)

        def unaryExpression(self):
            return self.getTypedRuleContext(poglinParser.UnaryExpressionContext,0)


        def primary(self):
            return self.getTypedRuleContext(poglinParser.PrimaryContext,0)


        def getRuleIndex(self):
            return poglinParser.RULE_unaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnaryExpression" ):
                listener.enterUnaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnaryExpression" ):
                listener.exitUnaryExpression(self)




    def unaryExpression(self):
